
syntax = "proto3";
option go_package = "github.com/mroy31/gonetem/internal/proto";

package netem;
import "google/protobuf/empty.proto";

service Netem {
    // general action
    rpc GetVersion(google.protobuf.Empty) returns (VersionResponse) {}
    rpc PullImages(google.protobuf.Empty) returns (stream PullSrvMsg) {}

    // Project actions
    rpc GetProjects(google.protobuf.Empty) returns (PrjListResponse) {}
    rpc OpenProject(OpenRequest) returns (PrjOpenResponse) {}
    rpc CloseProject(ProjectRequest) returns (AckResponse) {}
    rpc SaveProject(ProjectRequest) returns (FileResponse) {}
    rpc GetProjectStatus(ProjectRequest) returns (StatusResponse) {}

    // Read/Write network topology
    rpc ReadNetworkFile(ProjectRequest) returns (FileResponse) {}
    rpc WriteNetworkFile(WNetworkRequest) returns (AckResponse) {}

    // topology actions
    rpc Check(ProjectRequest) returns (AckResponse) {}
    rpc Reload(ProjectRequest) returns (AckResponse) {}
    rpc Run(ProjectRequest) returns (AckResponse) {}

    // Node actions
    rpc CanRunConsole(NodeRequest) returns (AckResponse) {}
    rpc Console(stream ConsoleCltMsg) returns (stream ConsoleSrvMsg) {}
    rpc Start(NodeRequest) returns (AckResponse) {}
    rpc Stop(NodeRequest) returns (AckResponse) {}
    rpc Restart(NodeRequest) returns (AckResponse) {}

}

// Stream messages

message ConsoleCltMsg {
    enum Code {
        INIT = 0;
        DATA = 1;
        RESIZE = 2;
    }

    Code code = 1;
    string prjId = 2;
    string node = 3;
    int32 ttyWidth = 4;
    int32 ttyHeight = 5;
    bytes data = 6;
}

message ConsoleSrvMsg {
    enum Code {
        STDOUT = 0;
        STDERR = 1;
        ERROR = 2;
        CLOSE = 3;
    }

    Code code = 1;
    bytes data = 3;
}

message PullSrvMsg {
    enum Code {
        START = 0;
        OK = 1;
        ERROR = 2;
    }

    Code code = 1;
    string image = 2;
    string error = 3;
}

// Request messages

message NodeRequest {
    string prjId = 1;
    string node = 2;
}

message ProjectRequest {
    string id = 1;
}

message WNetworkRequest {
    string id = 1;
    bytes data = 2;
}

message OpenRequest {
    string name = 1;
    bytes data = 2;
}

// Response messages

enum StatusCode {
    OK = 0;
    ERROR = 1;
}

message Status {
    StatusCode code = 1;
    string error = 2;
}

message AckResponse {
    Status status = 1;
}

message FileResponse {
    Status status = 1;
    bytes data = 2;
}

message VersionResponse {
    Status status = 1;
    string version = 2;
}

message StatusResponse {
    message NodeStatus {
        string name = 1;
        bool running = 2;
    }

    Status status = 1;
    string name = 2;
    string id = 3;
    string openAt = 4;
    bool running = 5;
    repeated NodeStatus nodes = 10;
}

message PrjListResponse {
    message Info {
        string id = 1;
        string name = 2;
        string openAt = 3;
    }

    Status status = 1;
    repeated Info projects = 2;
}

message PrjOpenResponse {
    Status status = 1;
    string id = 2;
}
